updated data cleaning

--- a/notebooks/1_init.ipynb
+++ b/notebooks/1_init.ipynb
@@ -1772,7 +1772,8 @@
     "ExecuteTime": {
      "end_time": "2021-02-17T17:16:01.340140Z",
      "start_time": "2021-02-17T17:16:01.315208Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
